from NMM.base.Object.Builder.Object import Object
from abc import ABC


class Part(Object, ABC):
    pass
