from NMM.base.Model.Model import Model


class PreprocessModel(Model):
    pass
