from NMM.base.Part.Part import Part


class FilePath(Part):
    pass
